--- a/views/home.pug
+++ b/views/home.pug
@@ -5,7 +5,7 @@ doctype html
 html(lang="en")
   head
     include headstuff
-    
+
   header
     h1 Patrick Doran is a Senior Web Developer &amp; Interaction Designer
     em Working near Raleigh, North Carolina
@@ -193,6 +193,10 @@ html(lang="en")
         | Professional work on 
         a(href='https://linkedin.com/in/patrickdoran' target='_blank' rel='noreferrer') LinkedIn
     hr
+    h3 Professional History
+    p The only <strike>var</strike> const is change.
+    div(id="patrickdorantimeline")
+    hr
     h3 About this website
     p PatrickDoran.com has been live on the internet since #{yearSince}. According to the Node server that generated this page, that's close to #{yearsLive} years! PatrickDoran.com is usually in handcrafted HTML and CSS, but was for a short time built in Flash. This particular iteration went live in 2020.
     ul 
@@ -204,8 +208,7 @@ html(lang="en")
       li It utilizes fonts already installed on your device, because who has time to wait? 
       li A service worker is utilized in case you go offline. This is a Progessive Web App (PWA).
 
-
-
+    
     img(src='patrick_doran_web_developer.jpg' width='750' height='311' loading='lazy' alt='Photograph of Patrick Doran')
     footer
       br
@@ -215,6 +218,7 @@ html(lang="en")
 
     script.
       if ('serviceWorker' in navigator) {
-        // navigator.serviceWorker.register('service-worker.js');
+     //  navigator.serviceWorker.register('service-worker.js');
       }
     script(defer src='patrickdoran_svelte_bundle.js')
+    script(defer src='patrickdoran_react_timeline.js')
