--- a/views/home.pug
+++ b/views/home.pug
@@ -45,154 +45,154 @@ html(lang="en")
         em #spfx
         | ) / Teams / Workflow &amp; Power Automate
     hr
-    h3 Speaking &amp; Writing
 
-    ul(id="svelteComponent")
-
-    hr
-    h3 Recent Coding Examples
-    details
-      summary Azure Cognitive Services handwriting recognition with JavaScript
+    article
+      h3 Speaking &amp; Writing
+      ul(id="svelteComponent")
+      hr
+      h3 Recent Coding Examples
+      details
+        summary Azure Cognitive Services handwriting recognition with JavaScript
+        blockquote
+          p
+            | A proof-of-concept - the web interface POSTs a document to Azure Cognative Services and returns the value of any handwritten text in it.
+          p
+            em
+              | Built with JavaScript, Axios JS, and Azure Cognative Services ML Handwriting Recognition.
+          p
+            | View complete code 
+            a(href='https://gist.github.com/PatD/abf44488a09f3447e04660a0a510047b' target='_blank' rel='noreferrer') on GitHub
+            | .
+      details
+        summary Load SharePoint REST data with Axios, display with Tabulator.js 
+        blockquote
+          p
+            | Solving a real-world business problem - user needs to select muliple SharePoint List Items, and pass those selections to another interface, to generate PDFs.
+          p
+            em
+              | Built with JavaScript, SharePoint REST web services, Axios.js, Tabulator.js and the browser&apos;s LocalStorage API.
+          p
+            | View complete code 
+            a(href='https://gist.github.com/PatD/dab385de8fcde42e612287569df11cd2' target='_blank' rel='noreferrer') on GitHub
+            | .
+      details
+        summary Prevent survey re-takes with a cookie that expires after a day
+        blockquote
+          p
+            | JavaScript that checks for a cookie before a survey is taken, and writes one if there isn&apos;t one already.
+          p
+            | View complete code 
+            a(href='https://gist.github.com/PatD/75a58a0906b87ec6324ca473ce09ba2e' target='_blank' rel='noreferrer') on GitHub
+            | .
+      details
+        summary JavaScript and SharePoint: Convert List Item to PDF
+        blockquote
+          p
+            | Reads a query string from a SharePoint URL, and then generates a PDF based off that data.
+          p
+            em Uses SharePoint On-Premise, Axios JS, and the pdfMake library.
+          p
+            | View complete code 
+            a(href='https://gist.github.com/PatD/634200e8f8153281ac7b3dfc426d17fb' target='_blank' rel='noreferrer') on GitHub
+            | .
+      details
+        summary CSS for SharePoint UI upgrade
+        blockquote
+          p CSS styles to restyle the default SharePoint interface.
+          p
+            | View complete code 
+            a(href='https://gist.github.com/PatD/21e9e098ac02ee1af24b05448619576b' target='_blank' rel='noreferrer') on GitHub
+            | .
+      details
+        summary SharePoint REST API and JavaScript: dynamic dropdowns
+        blockquote
+          p JavaScript to generate dropdown menus based on the values in a SharePoint list.
+          p
+            | View complete code 
+            a(href='https://gist.github.com/PatD/844b4dff0f2812b84227b3b371a577b7' target='_blank' rel='noreferrer') on GitHub
+            | .
+      details
+        summary REST Web Services driven user interface with JavaScript and HTML
+        blockquote
+          p
+            | Based on the current date, creates dropdown menus that query a REST endpoint for dynamically generated PDF reports.
+          p
+            | View complete code on 
+            a(href='https://gist.github.com/PatD/75a58a0906b87ec6324ca473ce09ba2e' target='_blank' rel='noreferrer') On Github
+            | .
+      hr
+      h3 Recent Design &amp; Development Projects
       blockquote
+        a(href='https://www.ncdot.gov/dmv/offices-services/locate-dmv-office/' target='_blank' rel='noreferrer')
+          img(src='patrick_doran_web_dmvlocations.PNG' loading='lazy' alt='Screenshot from NCDMV Office Locations Map')
+        h4 NCDMV Office Locations Map
         p
-          | A proof-of-concept - the web interface POSTs a document to Azure Cognative Services and returns the value of any handwritten text in it.
-        p
-          em
-            | Built with JavaScript, Axios JS, and Azure Cognative Services ML Handwriting Recognition.
-        p
-          | View complete code 
-          a(href='https://gist.github.com/PatD/abf44488a09f3447e04660a0a510047b' target='_blank' rel='noreferrer') on GitHub
-          | .
-    details
-      summary Load SharePoint REST data with Axios, display with Tabulator.js 
+          | Millions of licensed drivers across the state of North Carolina, and most will need to travel to a physical office for an ID. Hundreds of offices, but no easy way to know what was near you. This effort loads offices on a map from REST services, with relevant data, driving directions, and hours of operation. Utilizes Vue.js, Vuex, Leaflet.js, Bing Maps, REST services, geolocation, all on a public-facing SharePoint site.
+        em Role:
+        |  Developer, Designer | 
+        strong
+          a(href='https://www.ncdot.gov/dmv/offices-services/locate-dmv-office/' target='_blank' rel='noreferrer') Visit Site
+        |  | 
+        a(href='https://github.com/PatD/' target='_blank' rel='noreferrer') GitHub Repo
       blockquote
+        a(href='https://www.ncdot.gov/projects/complete-540/Pages/planned-construction-activities.aspx' target='_blank' rel='noreferrer')
+          img(src='patrick_doran_web_complete540.PNG' loading='lazy' alt='Screenshot from Complete 540 project')
+        h4 Complete I-540 Project Map
         p
-          | Solving a real-world business problem - user needs to select muliple SharePoint List Items, and pass those selections to another interface, to generate PDFs.
-        p
-          em
-            | Built with JavaScript, SharePoint REST web services, Axios.js, Tabulator.js and the browser&apos;s LocalStorage API.
-        p
-          | View complete code 
-          a(href='https://gist.github.com/PatD/dab385de8fcde42e612287569df11cd2' target='_blank' rel='noreferrer') on GitHub
-          | .
-    details
-      summary Prevent survey re-takes with a cookie that expires after a day
+          | Built to inform and engage Raleigh area citizens about a large, multi-decade construction project. Utilizes Leaflet.js, Bing Maps, SharePoint Lists and GeoJSON data on a public-facing SharePoint site.
+        em Role:
+        |  Developer, Designer | 
+        strong
+          a(href='https://www.ncdot.gov/projects/complete-540/Pages/planned-construction-activities.aspx' target='_blank' rel='noreferrer') Visit Site
+        |  | 
+        a(href='https://github.com/PatD/United-GIFs-of-America' target='_blank' rel='noreferrer') GitHub Repo
       blockquote
+        a(href='https://gifsamerica.netlify.app/' target='_blank' rel='noreferrer')
+          img(src='patrick_doran_web_gifsunited.PNG' loading='lazy' alt='Screenshot from United Gifs of America')
+        h4 United GIFs of America
         p
-          | JavaScript that checks for a cookie before a survey is taken, and writes one if there isn&apos;t one already.
-        p
-          | View complete code 
-          a(href='https://gist.github.com/PatD/75a58a0906b87ec6324ca473ce09ba2e' target='_blank' rel='noreferrer') on GitHub
-          | .
-    details
-      summary JavaScript and SharePoint: Convert List Item to PDF
+          | Combined the Giphy API, vanilla JavaScript, offline storage, and SVG maps to allow the citizen to easily identify and save their state&apos;s offical GIF.
+        |             Role: Developer, Designer | 
+        strong
+          a(href='https://gifsamerica.netlify.app/' target='_blank' rel='noreferrer') Visit Site
+        |  | 
+        a(href='https://github.com/PatD/United-GIFs-of-America' target='_blank' rel='noreferrer') GitHub Repo
       blockquote
+        a(href='https://www.ncdot.gov/dmv/real-id-wizard' target='_blank' rel='noreferrer')
+          img(src='patrick_doran_web_realidwizard.PNG' loading='lazy' alt='Screenshot from NCDMV Real ID Wizard')
+        h4 North Carolina DMV REAL ID Wizard
         p
-          | Reads a query string from a SharePoint URL, and then generates a PDF based off that data.
-        p
-          em Uses SharePoint On-Premise, Axios JS, and the pdfMake library.
-        p
-          | View complete code 
-          a(href='https://gist.github.com/PatD/634200e8f8153281ac7b3dfc426d17fb' target='_blank' rel='noreferrer') on GitHub
-          | .
-    details
-      summary CSS for SharePoint UI upgrade
+          | Built to help citizens navigate the requirements of getting a REAL ID driver license. Utilizes Vue.js and Vue-CLI on a public-facing SharePoint site.
+        |             Role: Front-End Developer | 
+        strong
+          a(href='https://www.ncdot.gov/dmv/real-id-wizard/' target='_blank' rel='noreferrer') Visit Site
+        |  | 
+        a(href='https://github.com/PatD/United-GIFs-of-America' target='_blank' rel='noreferrer') GitHub Repo
       blockquote
-        p CSS styles to restyle the default SharePoint interface.
+        a(href='https://connect.ncdot.gov/letting/Pages/letting-roll-up.aspx' target='_blank' rel='noreferrer')
+          img(src='patrick_doran_web_lettingrollup.PNG' loading='lazy' alt='Screenshot from Letting Rollup project')
+        h4 NCDOT Letting Rollup Dashboard
         p
-          | View complete code 
-          a(href='https://gist.github.com/PatD/21e9e098ac02ee1af24b05448619576b' target='_blank' rel='noreferrer') on GitHub
-          | .
-    details
-      summary SharePoint REST API and JavaScript: dynamic dropdowns
-      blockquote
-        p JavaScript to generate dropdown menus based on the values in a SharePoint list.
-        p
-          | View complete code 
-          a(href='https://gist.github.com/PatD/844b4dff0f2812b84227b3b371a577b7' target='_blank' rel='noreferrer') on GitHub
-          | .
-    details
-      summary REST Web Services driven user interface with JavaScript and HTML
-      blockquote
-        p
-          | Based on the current date, creates dropdown menus that query a REST endpoint for dynamically generated PDF reports.
-        p
-          | View complete code on 
-          a(href='https://gist.github.com/PatD/75a58a0906b87ec6324ca473ce09ba2e' target='_blank' rel='noreferrer') On Github
-          | .
-    hr
-    h3 Recent Design &amp; Development Projects
-    blockquote
-      a(href='https://www.ncdot.gov/dmv/offices-services/locate-dmv-office/' target='_blank' rel='noreferrer')
-        img(src='patrick_doran_web_dmvlocations.PNG' loading='lazy' alt='Screenshot from NCDMV Office Locations Map')
-      h4 NCDMV Office Locations Map
-      p
-        | Millions of licensed drivers across the state of North Carolina, and most will need to travel to a physical office for an ID. Hundreds of offices, but no easy way to know what was near you. This effort loads offices on a map from REST services, with relevant data, driving directions, and hours of operation. Utilizes Vue.js, Vuex, Leaflet.js, Bing Maps, REST services, geolocation, all on a public-facing SharePoint site.
-      em Role:
-      |  Developer, Designer | 
-      strong
-        a(href='https://www.ncdot.gov/dmv/offices-services/locate-dmv-office/' target='_blank' rel='noreferrer') Visit Site
-      |  | 
-      a(href='https://github.com/PatD/' target='_blank' rel='noreferrer') GitHub Repo
-    blockquote
-      a(href='https://www.ncdot.gov/projects/complete-540/Pages/planned-construction-activities.aspx' target='_blank' rel='noreferrer')
-        img(src='patrick_doran_web_complete540.PNG' loading='lazy' alt='Screenshot from Complete 540 project')
-      h4 Complete I-540 Project Map
-      p
-        | Built to inform and engage Raleigh area citizens about a large, multi-decade construction project. Utilizes Leaflet.js, Bing Maps, SharePoint Lists and GeoJSON data on a public-facing SharePoint site.
-      em Role:
-      |  Developer, Designer | 
-      strong
-        a(href='https://www.ncdot.gov/projects/complete-540/Pages/planned-construction-activities.aspx' target='_blank' rel='noreferrer') Visit Site
-      |  | 
-      a(href='https://github.com/PatD/United-GIFs-of-America' target='_blank' rel='noreferrer') GitHub Repo
-    blockquote
-      a(href='https://gifsamerica.us' target='_blank' rel='noreferrer')
-        img(src='patrick_doran_web_gifsunited.PNG' loading='lazy' alt='Screenshot from United Gifs of America')
-      h4 United GIFs of America
-      p
-        | Combined the Giphy API, vanilla JavaScript, offline storage, and SVG maps to allow the citizen to easily identify and save their state&apos;s offical GIF.
-      |             Role: Developer, Designer | 
-      strong
-        a(href='https://gifsamerica.us' target='_blank' rel='noreferrer') Visit Site
-      |  | 
-      a(href='https://github.com/PatD/United-GIFs-of-America' target='_blank' rel='noreferrer') GitHub Repo
-    blockquote
-      a(href='https://www.ncdot.gov/dmv/real-id-wizard' target='_blank' rel='noreferrer')
-        img(src='patrick_doran_web_realidwizard.PNG' loading='lazy' alt='Screenshot from NCDMV Real ID Wizard')
-      h4 North Carolina DMV REAL ID Wizard
-      p
-        | Built to help citizens navigate the requirements of getting a REAL ID driver license. Utilizes Vue.js and Vue-CLI on a public-facing SharePoint site.
-      |             Role: Front-End Developer | 
-      strong
-        a(href='https://www.ncdot.gov/dmv/real-id-wizard/' target='_blank' rel='noreferrer') Visit Site
-      |  | 
-      a(href='https://github.com/PatD/United-GIFs-of-America' target='_blank' rel='noreferrer') GitHub Repo
-    blockquote
-      a(href='https://connect.ncdot.gov/letting/Pages/letting-roll-up.aspx' target='_blank' rel='noreferrer')
-        img(src='patrick_doran_web_lettingrollup.PNG' loading='lazy' alt='Screenshot from Letting Rollup project')
-      h4 NCDOT Letting Rollup Dashboard
-      p
-        | Developed to help construction companies stay up to date on the latest project lettings. Utilizes JavaScript, local storage, and open source libraries like Tabulator, Moment.js, and Office Fabric UI on a public-facing SharePoint site.
-      |             Role: Front-End Developer | 
-      strong
-        a(href='https://connect.ncdot.gov/letting/Pages/letting-roll-up.aspx' target='_blank' rel='noreferrer') Visit Site
-      |  | 
-      a(href='https://github.com/PatD/United-GIFs-of-America' target='_blank' rel='noreferrer') GitHub Repo
-    hr
-    h3 Get in touch
-    ul
-      li Email is pdoran@gmail.com
-      li
-        | Code samples on 
-        a(href='https://github.com/patd' target='_blank' rel='noreferrer') GitHub
-      li
-        | Developer insights on 
-        a(href='https://twitter.com/swearpointjs' target='_blank' rel='noreferrer') Twitter
-      li
-        | Professional work on 
-        a(href='https://linkedin.com/in/patrickdoran' target='_blank' rel='noreferrer') LinkedIn
-    hr
+          | Developed to help construction companies stay up to date on the latest project lettings. Utilizes JavaScript, local storage, and open source libraries like Tabulator, Moment.js, and Office Fabric UI on a public-facing SharePoint site.
+        |             Role: Front-End Developer | 
+        strong
+          a(href='https://connect.ncdot.gov/letting/Pages/letting-roll-up.aspx' target='_blank' rel='noreferrer') Visit Site
+        |  | 
+        a(href='https://github.com/PatD/United-GIFs-of-America' target='_blank' rel='noreferrer') GitHub Repo
+      hr
+      h3 Get in touch
+      ul
+        li Email is pdoran@gmail.com
+        li
+          | Code samples on 
+          a(href='https://github.com/patd' target='_blank' rel='noreferrer') GitHub
+        li
+          | Developer insights on 
+          a(href='https://twitter.com/swearpointjs' target='_blank' rel='noreferrer') Twitter
+        li
+          | Professional work on 
+          a(href='https://linkedin.com/in/patrickdoran' target='_blank' rel='noreferrer') LinkedIn
+      hr
     h3 Professional History
     p The only <strike>var</strike> const is change.
     div(id="patrickdorantimeline")
@@ -208,17 +208,15 @@ html(lang="en")
       li It utilizes fonts already installed on your device, because who has time to wait? 
       li A service worker is utilized in case you go offline. This is a Progessive Web App (PWA).
 
-    
+      
+  footer
     img(src='patrick_doran_web_developer.jpg' width='750' height='311' loading='lazy' alt='Photograph of Patrick Doran')
-    footer
+    br
+    em
+      | This is at least the 7th iteration of PatrickDoran.com.  
       br
-      em
-        | This is at least the 7th iteration of PatrickDoran.com.  
-        br
 
-    script.
-      if ('serviceWorker' in navigator) {
-     //  navigator.serviceWorker.register('service-worker.js');
-      }
-    script(defer src='patrickdoran_svelte_bundle.js')
-    script(defer src='patrickdoran_react_timeline.js')
+  script.
+    if ('serviceWorker' in navigator) { /* navigator.serviceWorker.register('service-worker.js'); */}
+  script(defer src='patrickdoran_svelte_bundle.js')
+  script(defer src='patrickdoran_react_timeline.js')
