--- a/views/home.pug
+++ b/views/home.pug
@@ -10,7 +10,10 @@ html(lang="en")
     h1 Patrick Doran is a Senior Web Developer &amp; Interaction Designer
     em Working near Raleigh, North Carolina
     span(title='rolling trackballs 7 days a week') 🖲 
-  
+  section
+    picture
+      source(srcset="patrick_doran_header_photo.webp" media="(min-width: 600px)" type="image/webp")
+      img(src="patrick_doran_header_photo.jpg" title="Photo of Patrick Doran. He's a web developer. In this photo he is wearing sunglasses and smiling")
   main
     p
       | Patrick Doran designs fast user interfaces, codes modern JavaScript applications, sketches wireframes, and obsesses about usability and performance. Lately, Patrick has spent a lot of time with Vue.js and SharePoint development, design and branding.
