--- a/views/headstuff.pug
+++ b/views/headstuff.pug
@@ -2,6 +2,7 @@ meta(charset='UTF-8')
 meta(name='viewport' content='width=device-width, initial-scale=1.0')
 title #{title}
 link(rel='preload' href='new.css' as='style')
+link(rel='preload' href='patrick_doran_header_photo.webp' as='image')
 meta(name='description' content='Learn about Patrick Doran, a developer and designer working near Raleigh, North Carolina.')
 meta(property='og:title' content='Patrick Doran, Developer & Designer')
 meta(property='og:url' content='https://patrickdoran.com')
