--- a/views/headstuff.pug
+++ b/views/headstuff.pug
@@ -19,4 +19,4 @@ meta(name='apple-mobile-web-app-status-bar-style' content='black-translucent')
 meta(name='msapplication-starturl' content='https://patrickdoran.com')
 link(rel='icon' type='image/png' sizes='180x180' href='apple-touch-icon-180x180.png')
 link(rel='apple-touch-icon' type='image/png' sizes='180x180' href='apple-touch-icon-180x180.png')
-link(rel='stylesheet' href='new.css')
+link(rel='stylesheet' href='tailwind_patrickdoran.css')
