--- a/views/tailwind.css
+++ b/views/tailwind.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h2{
+    @apply font-extrabold text-2xl font-serif text-emerald-700
+}
+
+#svelteComponent li {
+    @apply flex-shrink p-8 max-w-full w-full sm:w-1/4 lg:w-1/4 lg:px-6 bg-white
+}
