--- a/views/home.pug
+++ b/views/home.pug
@@ -8,12 +8,22 @@ html(lang="en" class="bg-amber-50 border-t-4 border-emerald-700")
 
   aside 
     a(href="https://github.com/patd" target="_blank")
-      <svg class="opacity-40 hover:opacity-60" height="32" aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="32" data-view-component="true" class="octicon octicon-mark-github v-align-middle">
+      <svg height="32" aria-hidden="true" viewBox="0 0 16 16" width="32">
         <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
       </svg> 
 
     a(href="https://twitter.com/swearpointjs" target="_blank")
-      <svg class="opacity-40 hover:opacity-60" height="32" width="32" viewBox="0 0 24 24" aria-hidden="true" class="r-k200y r-13v1u17 r-4qtqp9 r-yyyyoo r-5sfk15 r-dnmrzs r-kzbkwu r-bnwqim r-1plcrui r-lrvibr"><g><path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"></path></g></svg>
+      <svg height="32" width="32" viewBox="0 0 24 24" aria-hidden="true" class="r-k200y r-13v1u17 r-4qtqp9 r-yyyyoo r-5sfk15 r-dnmrzs r-kzbkwu r-bnwqim r-1plcrui r-lrvibr"><g><path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"></path></g></svg>
+
+    a(href="https://www.linkedin.com/in/patrickdoran/" target="_blank")
+      <svg aria-hidden="true" viewBox="0 0 521.33 521.31"><path d="M695.53,695.54H618.29v-121c0-28.85-.52-66-40.18-66-40.23,0-46.39,31.43-46.39,63.88V695.53H454.48V446.77h74.15v34h1a81.27,81.27,0,0,1,73.17-40.18c78.29,0,92.73,51.5,92.73,118.49ZM367.32,412.76a44.83,44.83,0,1,1,44.82-44.83,44.83,44.83,0,0,1-44.82,44.83h0m38.62,282.77H328.62V446.77h77.33ZM734,251.38H289.8A38,38,0,0,0,251.34,289V735a38.07,38.07,0,0,0,38.47,37.62H734A38.15,38.15,0,0,0,772.66,735V288.92A38.12,38.12,0,0,0,734,251.35" transform="translate(-251.34 -251.34)"/></svg>
+
+    a(href="https://www.last.fm/user/pdoran" target="_blank")    
+      <svg x="0px" y="0px" viewBox="0 0 1000 1000"  aria-hidden="true">
+      <path d="M500,10C229.4,10,10,229.4,10,500c0,270.6,219.4,490,490,490c270.6,0,490-219.4,490-490C990,229.4,770.6,10,500,10z M635,644.4c-102.2,0-137.7-46.4-156.6-104.2l-18.9-59.6c-14.2-43.5-25.6-74.9-77.6-74.9c-36,0-83,23.6-83,96.9c0,57.2,39.3,92.9,80,92.9c34.6,0,55.3-19.4,66.1-29.1l18.1,51.6c-12.3,8.9-37.5,26.4-87.2,26.4c-68.7,0-134-48.8-134-139.4c0-94.1,68-149.5,138.1-149.5c78.6,0,107.9,28.6,132.7,106l19.5,59.5c14.2,43.5,44.1,75.1,103.8,75.1c40.2,0,61.5-8.9,61.5-31c0-17.3-10-29.8-40.2-36.9l-40.2-9.5c-49-11.9-68.5-37.5-68.5-78c0-64.9,52-85.2,105.2-85.2c60.3,0,96.9,22,101.6,75.6l-59.1,7.1c-2.4-25.6-17.7-36.3-46.1-36.3c-26,0-41.9,11.9-41.9,32.2c0,17.9,7.7,28.6,33.7,34.6l37.8,8.3c50.8,11.9,78,36.9,78,85.2C757.9,621.8,708.3,644.4,635,644.4z"/>
+      </svg>
+
+
 
   main(class='grid grid-flow-col grid-cols-5 mx-28 space-x-16 mt-10')
     header(class='col-span-1 shadow-inner my-8')
@@ -24,8 +34,7 @@ html(lang="en" class="bg-amber-50 border-t-4 border-emerald-700")
         source(srcset="patrick_doran_header_photo.webp" media="(min-width: 600px)" type="image/webp")
         img(class="rounded-full w-36 mx-auto -hue-rotate-20 border-4 " src="patrick_doran_header_photo.jpg" title="Photo of Patrick Doran. He's a web developer. In this photo he is wearing sunglasses and smiling")
       
-      h2
-        | Specializing In
+      h2 Specializing In
       dl(class='my-5')
         dt(class="font-extrabold text-center") &#x1F6E0;&#xFE0F; Front-End Web Development  &#x1F6E0;&#xFE0F;
         dd(class="text-center")
@@ -49,29 +58,28 @@ html(lang="en" class="bg-amber-50 border-t-4 border-emerald-700")
 
     section(class='p-8 col-span-4')
       h1
-        span(class='text-emerald-800 text-7xl') Patrick Doran 
+        span Patrick Doran 
         br
         | is a Front-End Developer 
         span(class='text-7xl') &amp; 
         | Interaction Designer
+        sup *
       
       p
         | Patrick Doran designs fast user interfaces, codes modern JavaScript applications, sketches wireframes, and obsesses about usability and performance. 
       p  
         | Lately, Patrick has spent a lot of time with Vue.js and SharePoint development, design and branding.
       
-        blockquote(class='p-8 font-serif')
-          | Patrick has been building and designing for the web since 
-          strong
-          time(datetime='1998-01') 1998
-            | . &#x1F4BE; 
-          small
-            cite
-              a(title='Follow this link for citation reference.' target='_blank' href='patrick_doran_work_history.jpg') [1]
-
+        blockquote
+          i * 
+          em Patrick has been building and designing 
+            a(title='Follow this link for citation reference.' target='_blank' href='patrick_doran_work_history.jpg') on the web since 
+              time(datetime='1998-01') 1998 
+                span &#x1F4BE; 
+          
        
         article(class="my-5")
-          h3 Speaking &amp; Writing
+          h2 Speaking &amp; Writing
           ul(id="svelteComponent" class="flex flex-wrap flex-row text-center space-x-4 space-y-4")
 
         article(class="my-5")
