--- a/public/tailwind_patrickdoran.css
+++ b/public/tailwind_patrickdoran.css
@@ -468,27 +468,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-sepia:  ;
 }
 
-.col-span-1 {
-  grid-column: span 1 / span 1;
+.order-2 {
+  order: 2;
 }
 
-.col-span-4 {
-  grid-column: span 4 / span 4;
+.order-1 {
+  order: 1;
 }
 
-.mx-28 {
-  margin-left: 7rem;
-  margin-right: 7rem;
+.col-span-5 {
+  grid-column: span 5 / span 5;
 }
 
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.col-span-2 {
+  grid-column: span 2 / span 2;
 }
 
 .my-5 {
@@ -496,13 +489,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1.25rem;
 }
 
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mx-20 {
   margin-left: 5rem;
   margin-right: 5rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
 }
 
 .block {
@@ -513,10 +512,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: flex;
 }
 
-.grid {
-  display: grid;
-}
-
 .w-36 {
   width: 9rem;
 }
@@ -525,26 +520,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.grid-flow-col {
-  grid-auto-flow: column;
-}
-
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
 .flex-row {
   flex-direction: row;
 }
 
 .flex-wrap {
   flex-wrap: wrap;
-}
-
-.space-x-16 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(4rem * var(--tw-space-x-reverse));
-  margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -581,10 +562,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 251 235 / var(--tw-bg-opacity));
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -598,21 +575,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1;
 }
 
-.font-extrabold {
-  font-weight: 800;
-}
-
-.shadow-inner {
-  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 @font-face {
   font-family: 'league_spartanbold';
 
   src: url('./leaguespartan-bold-webfont.woff') format('woff');
 }
+
+main {
+  margin-left: 7rem;
+  margin-right: 7rem;
+  margin-top: 3.5rem;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
+main > :not([hidden]) ~ :not([hidden]) {
+  margin-right: calc(4rem * var(--tw-space-x-reverse));
+  margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
+  --tw-space-x-reverse: 1;
+}
+
+/* social media icons */
 
 aside {
   position: fixed;
@@ -620,19 +604,67 @@ aside {
   right: 1.75rem;
 }
 
+aside svg {
+  margin-bottom: 1rem;
+  opacity: 0.4;
+}
+
+aside svg:hover {
+  opacity: 0.6;
+}
+
+aside span {
+  display: none;
+}
+
+header h2 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+  text-align: center;
+}
+
+header dl {
+  margin-top: 1.25rem;
+  margin-bottom: 1.75rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+header dl > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+header dt {
+  margin-bottom: 0.25rem;
+  text-align: center;
+  font-weight: 800;
+}
+
+header dd {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: inline-block;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+  text-align: center;
+  vertical-align: middle;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
 blockquote {
   padding-top: 1.75rem;
   text-align: right;
   font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-}
-
-blockquote time {
-  font-weight: 700;
-}
-
-blockquote time span {
-  font-weight: 400;
-  font-style: normal;
 }
 
 blockquote i {
@@ -643,13 +675,13 @@ blockquote i {
   color: rgb(219 39 119 / var(--tw-text-opacity));
 }
 
-aside svg {
-  margin-bottom: 1rem;
-  opacity: 0.4;
+blockquote time {
+  font-weight: 700;
 }
 
-aside svg:hover {
-  opacity: 0.6;
+blockquote time span {
+  font-weight: 400;
+  font-style: normal;
 }
 
 h1 {
@@ -681,6 +713,10 @@ h2 {
   line-height: 2rem;
   --tw-text-opacity: 1;
   color: rgb(4 120 87 / var(--tw-text-opacity));
+}
+
+main p {
+  margin-bottom: 1.25rem;
 }
 
 #svelteComponent li {
